feat: add build script

--- a/rinconcito-fe/src/app/add-edit-product/add-edit-product.component.css
+++ b/rinconcito-fe/src/app/add-edit-product/add-edit-product.component.css
@@ -1,13 +1,12 @@
 .top-nav-bar {
-    background-color: #708090;
+    background-color: #343a40;
     border-radius: 4px;
-    margin-top: 20px;
 }
 
 .btn {
     border: none;
     /* Remove borders */
-    color: #013c4d;
+    color: white;
     /* White text */
     padding: 12px 16px;
     /* Some padding */
@@ -18,7 +17,7 @@
 }
 
 .back-text {
-    color: #013c4d;
+    color: white;
     padding-left: 20px;
 }
 
