--- a/rinconcito-fe/src/app/add-edit-product/add-edit-product.component.html
+++ b/rinconcito-fe/src/app/add-edit-product/add-edit-product.component.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
     
-            <button type="submit" class="btn btn-info btn-add-update" [disabled]="!productForm.valid">{{productId == '' ? 'Crear' : 'Editar'}} Producto</button>
+            <button type="submit" class="btn btn-success btn-add-update" [disabled]="!productForm.valid">{{productId == '' ? 'Crear' : 'Editar'}} Producto</button>
         </form>
       </div>
     </div>
