--- a/rinconcito-fe/src/app/add-edit-product/add-edit-product.component.html
+++ b/rinconcito-fe/src/app/add-edit-product/add-edit-product.component.html
@@ -26,7 +26,7 @@
                 <label class="col-md-4 control-label" for="product_price">Precio</label>
                 <div class="col-md-4" style="display: inline-flex;">
                     <input id="product_price" name="product_price" placeholder="PRECIO UNITARIO" class="form-control input-md"
-                        required="" type="number" step="0.01" formControlName="unitPrice">
+                        required="" type="number" inputmode="decimal" step="0.01" formControlName="unitPrice">
                 </div>
             </div>
     
@@ -34,7 +34,7 @@
                 <label class="col-md-4 control-label" for="product_quantity">Cantidad</label>
                 <div class="col-md-4" style="display: inline-flex;">
                     <input id="product_quantity" name="product_quantity" placeholder="CANTIDAD DISPONIBLES" class="form-control input-md"
-                        required="" type="number" formControlName="quantity">
+                        required="" type="number" inputmode="numeric" formControlName="quantity">
                 </div>
             </div>
     
