--- a/rinconcito-fe/src/app/add-edit-product/add-edit-product.component.html
+++ b/rinconcito-fe/src/app/add-edit-product/add-edit-product.component.html
@@ -10,7 +10,7 @@
                 <label class="col-md-4 control-label" for="product_name">Nombre</label>
                 <div class="col-md-4" style="display: inline-flex;">
                     <input id="product_name" name="product_name" placeholder="NOMBRE PRODUCTO" class="form-control input-md"
-                        required="" type="text" formControlName="name">
+                        type="text" formControlName="name">
                 </div>
             </div>
     
@@ -18,7 +18,7 @@
                 <label class="col-md-4 control-label" for="product_store">Proveedor</label>
                 <div class="col-md-4" style="display: inline-flex;">
                     <input id="product_store" name="product_store" placeholder="PROVEEDOR PRODUCTO" class="form-control input-md"
-                        required="" type="text" formControlName="store">
+                        type="text" formControlName="store">
                 </div>
             </div>
     
@@ -26,7 +26,7 @@
                 <label class="col-md-4 control-label" for="product_price">Precio</label>
                 <div class="col-md-4" style="display: inline-flex;">
                     <input id="product_price" name="product_price" placeholder="PRECIO UNITARIO" class="form-control input-md"
-                        required="" type="number" inputmode="decimal" step="0.01" formControlName="unitPrice">
+                        type="number" inputmode="decimal" step="0.01" formControlName="unitPrice">
                 </div>
             </div>
     
@@ -34,7 +34,7 @@
                 <label class="col-md-4 control-label" for="product_quantity">Cantidad</label>
                 <div class="col-md-4" style="display: inline-flex;">
                     <input id="product_quantity" name="product_quantity" placeholder="CANTIDAD DISPONIBLES" class="form-control input-md"
-                        required="" type="number" inputmode="numeric" formControlName="quantity">
+                        type="number" inputmode="numeric" formControlName="quantity">
                 </div>
             </div>
     
